namespace.yml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "monitor",
    "labels": {
      "name": "monitor"
    }
  }
}
