prometheus-ingress.yml
###
### Had to specify not only the root URL ('graph') but the first node
### of all the internal links as well (e.g., 'status').
###
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
spec:
  rules:
  - host: prom.kube
    http:
      paths:
      - path: /graph
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /graph#
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /status
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /flags
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /config
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /rules
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /targets
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /service-discovery
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /alerts
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /chart
        backend:
          serviceName: prometheus-service
          servicePort: http
      - path: /metrics
        backend:
          serviceName: prometheus-service
          servicePort: http
